--- a/app/views/spree/checkout/payment/_razorpay.html.erb
+++ b/app/views/spree/checkout/payment/_razorpay.html.erb
@@ -1,5 +1,35 @@
-<%= link_to(Spree.t(:razorpay), razorpay_url(:payment_method_id => payment_method.id), :method => :post, :id => "razorpay_button", class: 'btn btn-outline-success rounded-lg font-weight-bold') %>
+<% content_for :head do %>
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+<% end %>
+<% Razorpay.setup('rzp_test_XtxOuh6psb6W4N', 'IX5qLv6ESBivyBWQ3BWpW4AR') %>
+
+<button id="rzp-button1">Pay</button>
 
 <script>
-  SpreeRazorpay.paymentMethodID = "<%= payment_method.id %>"  
- </script>
+var options = {
+    "key": "rzp_test_XtxOuh6psb6W4N", // Enter the Key ID generated from the Dashboard
+    "amount": "50000", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+    "currency": "INR",
+    "name": "Acme Corp",
+    "description": "Test Transaction",
+    "image": "https://example.com/your_logo",
+    "order_id": "order_IluGWxBm9U8zJ8", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+    "callback_url": "https://eneqd3r9zrjok.x.pipedream.net/",
+    "prefill": {
+        "name": "Gaurav Kumar",
+        "email": "gaurav.kumar@example.com",
+        "contact": "9999999999"
+    },
+    "notes": {
+        "address": "Razorpay Corporate Office"
+    },
+    "theme": {
+        "color": "#3399cc"
+    }
+};
+var rzp1 = new Razorpay(options);
+document.getElementById('rzp-button1').onclick = function(e){
+    rzp1.open();
+    e.preventDefault();
+}
+</script>
