--- a/app/views/spree/checkout/payment/_razorpay.html.erb
+++ b/app/views/spree/checkout/payment/_razorpay.html.erb
@@ -1,19 +1,33 @@
-<% content_for :head do %>
-  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-<% end %>
-<% Razorpay.setup('rzp_test_XtxOuh6psb6W4N', 'IX5qLv6ESBivyBWQ3BWpW4AR') %>
+<button id="razorpay-button" class="btn btn-outline-success rounded-lg font-weight-bold"><%= Spree.t(:razorpay)%></button>
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
-<button id="rzp-button1">Pay</button>
+<div
+  id="razor-pay-options"
+  data-razor-pay-key="<%= payment_method.preferences[:key_id] %>"
+  data-razor-pay-amount="<%= current_order.amount_in_paise %>"
+  data-razor-pay-currency="INR"
+  data-razor-pay-name="<%= payment_method.preferences[:merchant_name] %>"
+  data-razor-pay-description="<%= payment_method.preferences[:merchant_description] %>"
+  data-razor-pay-callback-url="<%= razorpay_response_url(order_id: current_order.number) %>"
+
+  data-razor-pay-prefill-name="<%= spree_current_user.try(:email) %>"
+  data-razor-pay-prefill-email="<%= spree_current_user.try(:email) %>"
+  data-razor-pay-prefill-contact=""
+
+  data-razor-pay-notes-address="<%= payment_method.preferences[:merchant_address] %>"
+
+  data-razor-pay-theme-color="<%= payment_method.preferences[:theme_color] %>"
+/>
+
+
 
 <script>
 var options = {
-    "key": "rzp_test_XtxOuh6psb6W4N", // Enter the Key ID generated from the Dashboard
-    "amount": "50000", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+    "key": "<%= payment_method.preferences[:key_id] %>",
+    "amount": "<%= current_order.amount_in_paise %>",
     "currency": "INR",
-    "name": "Acme Corp",
-    "description": "Test Transaction",
-    "image": "https://example.com/your_logo",
-    "order_id": "order_IluGWxBm9U8zJ8", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+    "name": "<%= payment_method.preferences[:merchant_name] %>",
+    "description": "<%= payment_method.preferences[:merchant_description] %>",
     "callback_url": "https://eneqd3r9zrjok.x.pipedream.net/",
     "prefill": {
         "name": "Gaurav Kumar",
@@ -33,3 +47,4 @@ document.getElementById('rzp-button1').onclick = function(e){
     e.preventDefault();
 }
 </script>
+
